# optuna-practice

./: .gitignore  README.md  pyproject.toml  r.txt
src/: main.py
src/botorch_sampler_patches/: patch.py
src/methods/botorch/: main.py
src/old/botorch_sampler_patches/: __init__.py  patch.py
src/old/scripts/: gp_sampler.py  penalized_botorch_3600sec.db  penalized_deterministic_botorch_3600sec.db  sampler 比較.py
src/old/scripts/images/spiral 1/: botorch_3600sec.db  constrained_botorch_3600sec.db
src/old/scripts/images/spiral 2 return None if infeasible/: constrained_botorch_3600sec_log.db  (+1 more)
src/old/template/: spiral.py  template.py
src/problem/: spiral.py
src/scripts/: botorch_3600sec.db  constrained_penalized_botorch_3600sec.db  penalized_botorch_3600sec.db  sampler 比較.py
src/scripts/images/spiral 1/: constrained_penalized_botorch_3600sec.db  penalized_botorch_3600sec.db
src/scripts/images/spiral 2/: botorch_3600sec.db  constrained_botorch_3600sec.db  constrained_botorch_3600sec_log.db  penalized_botorch_3600sec.db
src/template/: spiral.py  template.py
src/visualization/: managing.py
src2/methods/: base_manager.py  beysian_optimization_manager.py  botorch_manager.py  random.py  random_manager.py
src2/methods/admmbo/: admmbo.py  admmo_type.py  bayesfeas.py
src2/problems/: base_problem.py  gravity.py  spiral.py
src2/scripts/: テスト.py
src3/: sandbox2.py  sb.py  sb3.py  show_space.py  show_torch_model.py  show_torch_model2.py
src4/: Book1 - コピー.xlsx  fda.py  main.py
src5/: graph.py  main.py  main2.py  main3.py  main4.py
(+1 files in other folders)
