[tool.poetry]
name = "optimization-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
optuna = "^4.0.0"
torch = "^2.4.1"
scipy = "^1.14.1"
botorch = "^0.11.3"
optuna-integration = "^4.0.0"
pandas = "^2.2.2"
plotly = "^5.24.0"
# instead of kaleido
orca = "^1.8"
psutil = "^6.0.0"
requests = "^2.32.3"
bayesian-optimization = "^2.0.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
