[tool.poetry]
name = "optimization-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
optuna = "^4.0.0"
botorch = "^0.12.0"
optuna-integration = "^4.0.0"
pandas = "^2.2.2"
plotly = "^5.24.0"
psutil = "^6.0.0"
requests = "^2.32.3"
bayesian-optimization = "^2.0.0"
matplotlib = "^3.9.2"
dash = "^2.18.2"
#kaleido = "^0.4.1"
# orca: requires installing binary
dask = "^2024.11.2"
distributed = "^2024.11.2"
#scikit-fda = "^0.9.1"
openpyxl = "^3.1.5"
chaospy = "^4.3.17"
lmfit = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
